--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>HELLO THIS IS NEW</h1>  
+  <h1 class="this-class">HELLO THIS IS NEW</h1>  
 </body>
 </html>
