select a random word from a list

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <script type="module" src="script.js"></script>
+  <script type="module" src="helperFunctions.js"></script>
 </head>
 
 <body>
-  <h1 class="this-class">HELLO THIS IS NEW</h1>  
+  <h1>Beginner Hangman Game</h1>  
+  <p>Hello, and welcome to my beginner hangman game. Click on the box to make a guess. You will have 5 tries total to guess the entire word. </p>
+  <div class="letter-buttons">
+    <button class="individual-letter-button" type="button">A</button>
+    <button class="individual-letter-button" type="button">B</button>
+    <button class="individual-letter-button" type="button">C</button>
+    <button class="individual-letter-button" type="button">D</button>
+    <button class="individual-letter-button" type="button">E</button>
+    <button class="individual-letter-button" type="button">F</button>
+    <button class="individual-letter-button" type="button">G</button>
+    <button class="individual-letter-button" type="button">H</button>
+    <button class="individual-letter-button" type="button">I</button>
+    <button class="individual-letter-button" type="button">J</button>
+    <button class="individual-letter-button" type="button">K</button>
+    <button class="individual-letter-button" type="button">L</button>
+    <button class="individual-letter-button" type="button">M</button>
+    <button class="individual-letter-button" type="button">N</button>
+    <button class="individual-letter-button" type="button">O</button>
+    <button class="individual-letter-button" type="button">P</button>
+    <button class="individual-letter-button" type="button">Q</button>
+    <button class="individual-letter-button" type="button">R</button>
+    <button class="individual-letter-button" type="button">S</button>
+    <button class="individual-letter-button" type="button">T</button>
+    <button class="individual-letter-button" type="button">U</button>
+    <button class="individual-letter-button" type="button">V</button>
+    <button class="individual-letter-button" type="button">W</button>
+    <button class="individual-letter-button" type="button">X</button>
+    <button class="individual-letter-button" type="button">Y</button>
+    <button class="individual-letter-button" type="button">Z</button>
+
+    
+  </div>
 </body>
 </html>
