--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>Beginner Hangman Game</h1>  
+  <h1 id="header">Beginner Hangman Game</h1>  
   <p>Hello, and welcome to my beginner hangman game. Click on the box to make a guess. You will have 5 tries total to guess the entire word. </p>
   <div class="letter-buttons">
     <button class="individual-letter-button" type="button">A</button>
@@ -39,8 +39,8 @@
     <button class="individual-letter-button" type="button">X</button>
     <button class="individual-letter-button" type="button">Y</button>
     <button class="individual-letter-button" type="button">Z</button>
-
-    
+  </div>
+  <div id="blank-word" class="selected-word-display">
   </div>
 </body>
 </html>
