--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-  <script type="module" src="script.js"></script>
-  <script type="module" src="helperFunctions.js"></script>
+  <link rel="stylesheet" href="./style.css">
+  <script type="module" src="./script.js"></script>
+  <script type="module" src="./helperFunctions.js"></script>
 </head>
 
 <body>
@@ -42,5 +42,9 @@
   </div>
   <div id="blank-word" class="selected-word-display">
   </div>
+  <button onclick="loadNewGame()" type="button">
+    New Game
+  </button>
+
 </body>
 </html>
