see all guessed letters in word

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Hangman</title>
     <link rel="stylesheet" href="./style.css" />
     <script type="module" src="./script.js"></script>
     <script type="module" src="./helperFunctions.js"></script>
@@ -95,7 +95,7 @@
         Z
       </button>
     </div>
-    <div id="blank-word" class="selected-word-display"></div>
+    <div id="word-guess" class="selected-word-display"></div>
     <h3>Guessed Letters</h3>
     <div id="guessed-letters"></div>
     <button onclick="loadNewGame()" type="button">New Game</button>
